// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`greedy persona builder: 'attrition' > is deterministic for a fixed seed and snapshots aggregate counts 1`] = `
{
  "curve": {
    "early": 12,
    "late": 8,
    "mid": 20,
  },
  "lands": 10,
  "maxNonbasicCopies": 4,
  "nonlands": 40,
  "roles": {
    "draw": 4,
    "finishers": 4,
    "interaction": 5,
    "lands": 10,
    "removal": 11,
    "threats": 16,
  },
  "total": 50,
  "uniqueCards": 11,
}
`;

exports[`greedy persona builder: 'burn' > is deterministic for a fixed seed and snapshots aggregate counts 1`] = `
{
  "curve": {
    "early": 26,
    "late": 0,
    "mid": 14,
  },
  "lands": 10,
  "maxNonbasicCopies": 4,
  "nonlands": 40,
  "roles": {
    "draw": 2,
    "finishers": 4,
    "interaction": 5,
    "lands": 10,
    "removal": 9,
    "threats": 20,
  },
  "total": 50,
  "uniqueCards": 12,
}
`;

exports[`greedy persona builder: 'draw-go' > is deterministic for a fixed seed and snapshots aggregate counts 1`] = `
{
  "curve": {
    "early": 20,
    "late": 10,
    "mid": 10,
  },
  "lands": 10,
  "maxNonbasicCopies": 4,
  "nonlands": 40,
  "roles": {
    "draw": 9,
    "finishers": 6,
    "interaction": 11,
    "lands": 10,
    "removal": 7,
    "threats": 7,
  },
  "total": 50,
  "uniqueCards": 12,
}
`;

exports[`greedy persona builder: 'midrange' > is deterministic for a fixed seed and snapshots aggregate counts 1`] = `
{
  "curve": {
    "early": 13,
    "late": 13,
    "mid": 14,
  },
  "lands": 10,
  "maxNonbasicCopies": 4,
  "nonlands": 40,
  "roles": {
    "draw": 4,
    "finishers": 4,
    "interaction": 6,
    "lands": 10,
    "removal": 9,
    "threats": 17,
  },
  "total": 50,
  "uniqueCards": 12,
}
`;

exports[`greedy persona builder: 'reanimator' > is deterministic for a fixed seed and snapshots aggregate counts 1`] = `
{
  "curve": {
    "early": 18,
    "late": 11,
    "mid": 11,
  },
  "lands": 10,
  "maxNonbasicCopies": 4,
  "nonlands": 40,
  "roles": {
    "draw": 7,
    "finishers": 7,
    "interaction": 7,
    "lands": 10,
    "removal": 4,
    "threats": 15,
  },
  "total": 50,
  "uniqueCards": 11,
}
`;

exports[`greedy persona builder: 'weenie' > is deterministic for a fixed seed and snapshots aggregate counts 1`] = `
{
  "curve": {
    "early": 20,
    "late": 4,
    "mid": 16,
  },
  "lands": 10,
  "maxNonbasicCopies": 4,
  "nonlands": 40,
  "roles": {
    "draw": 2,
    "finishers": 4,
    "interaction": 4,
    "lands": 10,
    "removal": 5,
    "threats": 25,
  },
  "total": 50,
  "uniqueCards": 12,
}
`;
